--- a/public/bio_debra-jaff.html
+++ b/public/bio_debra-jaff.html
@@ -1,5 +1,5 @@
 <div class="modalinner">
-    <div class="bioheader clearfix">
+    <div class="modalheader clearfix">
         <div class="eight columns">
             <img src="/images/photo_debra-jaff.jpg" alt="" />
         </div>
@@ -8,7 +8,7 @@
             <p class="title">Title</p>
         </div>
     </div>
-    <div class="biocontent clearfix">
+    <div class="modalcontent clearfix">
         <div class="eight columns">
             <h3>Affiliations and Accreditations</h3>
             <ul class="affiliations">
@@ -19,7 +19,7 @@
             <p>TBD Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
-    <div class="biofooter">
-        <a href="bio_gail-hadley.html" class="in-reveal">Next team member</a>
+    <div class="modalfooter">
+        <a href="bio_gail-hadley.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
