--- a/public/bio_michael-jaff.html
+++ b/public/bio_michael-jaff.html
@@ -1,5 +1,5 @@
 <div class="modalinner">
-    <div class="bioheader clearfix">
+    <div class="modalheader clearfix">
         <div class="eight columns">
             <img src="/images/photo_michael-jaff.jpg" alt="" />
         </div>
@@ -8,7 +8,7 @@
             <p class="title">Founder and Director</p>
         </div>
     </div>
-    <div class="biocontent clearfix">
+    <div class="modalcontent clearfix">
         <div class="eight columns">
             <h3>Affiliations and Accreditations</h3>
             <ul class="affiliations">
@@ -26,7 +26,7 @@
             <p>Dr. Jaff has published extensively in over 100 peer-reviewed vascular medicine publications. He has had the honor of serving as the President of the Society for Vascular Medicine and Biology as well as being the first person designated as Master of the Society for Vascular Medicine. Dr. Jaff is a Fellow of the American College of Physicians, American College of Cardiology, and American Heart Association, and is a registered physician in vascular interpretation. In 2008, Dr. Jaff received an honorary Doctorate of Science from A.T. Still University School of Medicine, and in 2010 he was the recipient of the &ldquo;Leaders in Vascular Education&rdquo; award at the annual Vascular Interventional Advances (VIVA) meeting. Most recently, Dr. Jaff completed his executive Masters in Business Administration from Harvard Business School.</p>
         </div>
     </div>
-    <div class="biofooter">
-        <a href="bio_debra-jaff.html" class="in-reveal">Next team member</a>
+    <div class="modalfooter">
+        <a href="bio_debra-jaff.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
