Many requested changes for desktop view, new bio images, filling in content and popups, starting on mobile changes

--- a/public/bio_gail-hadley.html
+++ b/public/bio_gail-hadley.html
@@ -4,19 +4,23 @@
             <img src="/images/photo_gail-hadley.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Gail Hadley</h2>
-            <p class="title">Title</p>
+            <h2>Gail L. Hadley, RN, RVT</h2>
+            <p class="title">Technical Director</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
         <div class="eight columns">
             <h3>Affiliations and Accreditations</h3>
             <ul class="affiliations">
-                <li>TBD</li>
+                <li>Vice-Chair ARDMS (American Registry of Diagnostic Medical Sonographers &mdash; 2010 &ndash; present</li>
+                <li>SDMS &mdash; Society of Diagnostic Medical Sonographers Past CMC (Conference Management Committee) chair to Vascular Track at annual conference. 2006 &ndash; 2011</li>
+                <li>FSVU &mdash; Fellow Society of Vascular Ultrasound</li>
             </ul>
         </div>
         <div class="twelve columns">
-            <p>TBD Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>As technical director of VasCore, Gail oversees trial designs, document preparation and clinical center training. Having started her career as a critical care coronary nurse, Gail developed an interest in vascular disease. In 1978 she began her training at Northwestern Memorial Hospital as a vascular technologist and then earned the RVT credential in 1983. Gail then became technical director of the Vascular Lab at Columbus Hospital, an affiliate of Northwestern Memorial Hospital in Chicago, Illinois. In 1998 Gail wanted to promote quality and standards for noninvasive vascular testing and took the position as Technical Director of the Intersocietal Commission of Accreditation for Vascular Laboratories (ICAVL). Gail brought her vast experience to VasCore in 1999, when she became the technical director.</p>
+
+            <p>Not only has Gail co-authored many papers in the field of vascular technology, she has received recognition for her work by the Society of Vascular Ultrasound and was inducted as a &ldquo;Fellow in the Society of Vascular Ultrasound&rdquo;. Gail is currently the Vice-Chair for the American Registry of Diagnostic Sonographers (ARDMS).</p>
         </div>
     </div>
     <div class="modalfooter">
