--- a/public/bio_michael-jaff.html
+++ b/public/bio_michael-jaff.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Michael R. Jaff, D.O.</h2>
-            <p class="title">Founder and Director</p>
+            <p class="title">Founder and Medical Director of VasCore</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -13,8 +13,11 @@
             <h3>Affiliations and Accreditations</h3>
             <ul class="affiliations">
                 <li>MGH/Harvard Medical School</li>
-                <li>ICAVL, ARDMS, VIVA, SCAI PVD</li>
-                <li>Committee, Vascular Disease Foundation</li>
+                <li>ICAVL</li>
+                <li>ARDMS</li>
+                <li>VIVA</li>
+                <li>SCAI PVD Committee</li>
+                <li>Vascular Disease Foundation</li>
                 <li>American College of Cardiology</li>
                 <li>American Heart Association</li>
                 <li>Society for Vascular Medicine</li>
