--- a/public/bio_sandra-croteau.html
+++ b/public/bio_sandra-croteau.html
@@ -4,8 +4,8 @@
             <img src="/images/photo_sandra-croteau.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Sandra Croteau</h2>
-            <p class="title">Title</p>
+            <h2>Sandra M. Croteau, RN, RVT</h2>
+            <p class="title">Technical Staff Interpreter</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -16,7 +16,9 @@
             </ul>
         </div>
         <div class="twelve columns">
-            <p>TBD Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>As a technical interpreter at VasCore, Sandy provides technical support and independent image analysis. She has 18 years of experience in performing diagnostic vascular ultrasonography at the Massachusetts General Hospital Vascular Laboratory. From physiologic testing in PAD, and duplex ultrasonography in cerebrovascular, to aortic, renal and mesenteric, arterial and venous vascular beds, Sandy has expertise in performing the full range of vascular testing. In 2004, she was awarded the Star Achievement award from the MGH Department of Surgery.</p>
+
+            <p>Sandy received her nursing degree from St. Vincent&rsquo;s Hospital School of Nursing in 1980. From 1984 to 1989, she worked as a staff nurse in the vascular surgical intensive care unit at MGH and then earned her BSN degree from Fitchburg State College. In 1993, Sandy gained the credential of RVT through the American Registry of Diagnostic Medical Sonographers (ARDMS).</p>
         </div>
     </div>
     <div class="modalfooter">
