--- a/public/bio_susan-batdorf.html
+++ b/public/bio_susan-batdorf.html
@@ -4,8 +4,8 @@
             <img src="/images/photo_susan-batdorf.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Susan Batdorf</h2>
-            <p class="title">Title</p>
+            <h2>Susan M. Batdorf</h2>
+            <p class="title">Quality Auditor</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -16,7 +16,7 @@
             </ul>
         </div>
         <div class="twelve columns">
-            <p>TBD Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>As our Quality Auditor, Susan ensures VasCore delivers the highest level of accuracy by regularly auditing our internal systems, data and final reports for clinical studies. With 18 years&rsquo; experience as a Quality Auditor, Susan has a vast knowledge of regulatory guidelines everywhere from North America to Eastern Europe to Asia. She holds a Bachelors of Science from the University of Illinois and a Masters of Science in Health Education from George Williams College. Before her career in quality auditing, she taught biology and has used this training in education to help develop a Regulatory Oversight and Compliance class at Northwestern University. Susan is also involved in many professional organizations, including the Society of Clinical Research Associates (SOCRA) and the Society of Quality Assurance.</p>
         </div>
     </div>
     <div class="modalfooter">
