--- a/public/bio_victoria-sova.html
+++ b/public/bio_victoria-sova.html
@@ -4,8 +4,8 @@
             <img src="/images/photo_victoria-sova.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Victoria Sova</h2>
-            <p class="title">Title</p>
+            <h2>Victoria B. Sova, RN, RVT</h2>
+            <p class="title">Technical Staff Interpreter</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -16,7 +16,9 @@
             </ul>
         </div>
         <div class="twelve columns">
-            <p>TBD Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Throughout the course of each trial, Victoria provides independent ultrasound analysis and support to sites and sponsors, as one of our technical staff interpreters. She has nearly 20 years&rsquo; experience in diagnostic ultrasound and has earned the Registered Vascular Technologist (RVT) credential from the American Registry of Diagnostic Medical Sonographers (ARDMS).</p>
+
+            <p>Prior to VasCore, Victoria was a senior sonographer for the Vascular Diagnostic Laboratory at the Massachusetts General Hospital. Before entering the field of vascular technology, she was an MGH staff nurse for the trauma and surgical intensive care unit that specializes in care of patients with vascular disorders.</p>
         </div>
     </div>
     <div class="modalfooter">
