--- a/public/bio_debra-jaff.html
+++ b/public/bio_debra-jaff.html
@@ -4,8 +4,8 @@
             <img src="/images/photo_debra-jaff.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Debra Jaff</h2>
-            <p class="title">Title</p>
+            <h2>Debra A. Jaff</h2>
+            <p class="title">Administrative Director</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
