--- a/public/bio_josh-beckman.html
+++ b/public/bio_josh-beckman.html
@@ -4,8 +4,8 @@
             <img src="/images/photo_josh-beckman.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Josh Beckman</h2>
-            <p class="title">Title</p>
+            <h2>Joshua Beckman, MD</h2>
+            <p class="title">Physician Staff Interpreter</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
