--- a/public/bio_debra-jaff.html
+++ b/public/bio_debra-jaff.html
@@ -10,13 +10,10 @@
     </div>
     <div class="modalcontent clearfix">
         <div class="eight columns">
-            <h3>Affiliations and Accreditations</h3>
-            <ul class="affiliations">
-                <li>TBD</li>
-            </ul>
+
         </div>
         <div class="twelve columns">
-            <p>TBD Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Debra A. Jaff is the Administrative Director of VasCore, the Vascular Ultrasound Core Laboratory. Debra honed her management and operational skills, managing a small law firm in New York City. In 1987, Debra became Director of Marketing for a large multi-city law firm. Subsequently, Debra assumed responsibility for the organizational, legal and financial aspects of VasCore. Customer satisfaction has always been Debra&rsquo;s focus, and with the increasing international involvement of VasCore, Debra continues to develop processes to insure excellence in infrastructure so that the technical expertise of VasCore remains unparalleled.</p>
         </div>
     </div>
     <div class="modalfooter">
