--- a/public/bio_justin-mcneil.html
+++ b/public/bio_justin-mcneil.html
@@ -13,7 +13,7 @@
 
         </div>
         <div class="twelve columns">
-            <p>TBD Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Since 2006, Justin McNeil has worked various jobs in Partners Healthcare Systems as a part-time employee. In 2009, he joined VasCore in a part-time role. After 3 years of experience, Justin officially became part of the VasCore team as an administrative assistant in spring of 2012. He has attended the University of Massachusetts Boston for some schooling and plans on furthering his education in the upcoming years.</p>
         </div>
     </div>
     <div class="modalfooter">
