Adding new photos for Katie, removing Susan, adding Chris Luongo, adding new About Us intro, tweaking About Height to match

--- a/public/bio_debra-jaff.html
+++ b/public/bio_debra-jaff.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Debra A. Jaff</h2>
-            <p class="title">Administrative Director</p>
+            <p class="title">Business Manager</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
