--- a/public/bio_justin-mcneil.html
+++ b/public/bio_justin-mcneil.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Justin McNeil</h2>
-            <p class="title">Administrative Staff</p>
+            <p class="title">Project Manager</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
