Removing Chris Luongo (and other files no longer needed), moving Erin up and adjusting About height at desktop.

--- a/public/bio_erin-lacey.html
+++ b/public/bio_erin-lacey.html
@@ -19,6 +19,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_michael-jaff.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_justin-mcneil.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
