--- a/public/bio_justin-mcneil.html
+++ b/public/bio_justin-mcneil.html
@@ -17,6 +17,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_michael-jaff.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_ritu-shrestha.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
