--- a/public/bio_gail-hadley.html
+++ b/public/bio_gail-hadley.html
@@ -12,7 +12,8 @@
         <div class="eight columns">
             <h3>Affiliations and Accreditations</h3>
             <ul class="affiliations">
-                <li>Vice-Chair ARDMS (American Registry of Diagnostic Medical Sonographers &mdash; 2010 &ndash; present</li>
+                <li>ARDMS subject matter expert 2001- 2006</li>
+                <li>ARDMS board member 2006-2012; Vice-chair 2010-2012</li>
                 <li>SDMS &mdash; Society of Diagnostic Medical Sonographers Past CMC (Conference Management Committee) chair to Vascular Track at annual conference. 2006 &ndash; 2011</li>
                 <li>FSVU &mdash; Fellow Society of Vascular Ultrasound</li>
             </ul>
@@ -20,7 +21,7 @@
         <div class="twelve columns">
             <p>As technical director of VasCore, Gail oversees trial designs, document preparation and clinical center training. Having started her career as a critical care coronary nurse, Gail developed an interest in vascular disease. In 1978 she began her training at Northwestern Memorial Hospital as a vascular technologist and then earned the RVT credential in 1983. Gail then became technical director of the Vascular Lab at Columbus Hospital, an affiliate of Northwestern Memorial Hospital in Chicago, Illinois. In 1998 Gail wanted to promote quality and standards for noninvasive vascular testing and took the position as Technical Director of the Intersocietal Commission of Accreditation for Vascular Laboratories (ICAVL). Gail brought her vast experience to VasCore in 1999, when she became the technical director.</p>
 
-            <p>Not only has Gail co-authored many papers in the field of vascular technology, she has received recognition for her work by the Society of Vascular Ultrasound and was inducted as a &ldquo;Fellow in the Society of Vascular Ultrasound&rdquo;. Gail is currently the Vice-Chair for the American Registry of Diagnostic Sonographers (ARDMS).</p>
+            <p>Not only has Gail co-authored many papers in the field of vascular technology, she has received recognition for her work by the Society of Vascular Ultrasound and was inducted as a &ldquo;Fellow in the Society of Vascular Ultrasound&rdquo;. She also served as the vice-chair for the American Registry of Diagnostic Sonographers (ARDMS) from 2010-2012.</p>
         </div>
     </div>
     <div class="modalfooter">
