Updating job title for Debra Jaff on detail popup

--- a/public/bio_debra-jaff.html
+++ b/public/bio_debra-jaff.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Debra A. Jaff</h2>
-            <p class="title">Business Manager</p>
+            <p class="title">Administrative Director</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -13,7 +13,7 @@
 
         </div>
         <div class="twelve columns">
-            <p>Debra A. Jaff is the Business Manager of VasCore, the Vascular Ultrasound Core Laboratory. Debra honed her management and operational skills, managing a small law firm in New York City. In 1987, Debra became Director of Marketing for a large multi-city law firm. Subsequently, Debra assumed responsibility for the organizational, legal and financial aspects of VasCore. Customer satisfaction has always been Debra&rsquo;s focus, and with the increasing international involvement of VasCore, Debra continues to develop processes to insure excellence in infrastructure so that the technical expertise of VasCore remains unparalleled.</p>
+            <p>Debra A. Jaff is the Administrative Director of VasCore, the Vascular Ultrasound Core Laboratory. Debra honed her management and operational skills, managing a small law firm in New York City. In 1987, Debra became Director of Marketing for a large multi-city law firm. Subsequently, Debra assumed responsibility for the organizational, legal and financial aspects of VasCore. Customer satisfaction has always been Debra&rsquo;s focus, and with the increasing international involvement of VasCore, Debra continues to develop processes to insure excellence in infrastructure so that the technical expertise of VasCore remains unparalleled.</p>
         </div>
     </div>
     <div class="modalfooter">
