Updating Lindsey's title, updating first line of Sabina's bio, removing Josh Beckman

--- a/public/bio_lindsey-st-louis.html
+++ b/public/bio_lindsey-st-louis.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Lindsey St. Louis</h2>
-            <p class="title">Administrative Assistant</p>
+            <p class="title">Staff Assistant</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -13,7 +13,7 @@
 
         </div>
         <div class="twelve columns">
-            <p>As an Administrative Assistant, Lindsey helps manage the flow of information throughout the course of a trial, including electronic data capture, site communication, and tending the VasCore Tracking System. Prior to joining the VasCore team in October of 2014, she earned her Bachelor of Science in Health Care Management and worked at Dartmouth-Hitchcock Medical Center in Lebanon, New Hampshire. Lindsey uses her interest in outstanding service, quality, and research to maintain VasCore’s standard of excellence.</p>
+            <p>As a Staff Assistant, Lindsey helps manage the flow of information throughout the course of a trial, including electronic data capture, site communication, and tending the VasCore Tracking System. Prior to joining the VasCore team in October of 2014, she earned her Bachelor of Science in Health Care Management and worked at Dartmouth-Hitchcock Medical Center in Lebanon, New Hampshire. Lindsey uses her interest in outstanding service, quality, and research to maintain VasCore’s standard of excellence.</p>
         </div>
     </div>
     <div class="modalfooter">
