--- a/public/bio_sabina-dhami.html
+++ b/public/bio_sabina-dhami.html
@@ -13,7 +13,7 @@
 
         </div>
         <div class="twelve columns">
-            <p>Sabina Dhami recently joined VasCore as a Staff Assistant this past fall. She has a strong interest in research and is dedicated to providing continuous support for each trial's success. Sabina earned her Bachelor’s degree in Healthcare Administration and Economics from Stonehill College in 2014 and plans to pursue her Master's degree in the near future.</p>
+            <p>Sabina Dhami joined VasCore as a Staff Assistant in the fall of 2014. She has a strong interest in research and is dedicated to providing continuous support for each trial's success. Sabina earned her Bachelor’s degree in Healthcare Administration and Economics from Stonehill College in 2014 and plans to pursue her Master's degree in the near future.</p>
         </div>
     </div>
     <div class="modalfooter">
