--- a/public/bio_sandra-croteau.html
+++ b/public/bio_sandra-croteau.html
@@ -19,6 +19,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_josh-beckman.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_victoria-sova.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
