--- a/public/bio_erin-lacey.html
+++ b/public/bio_erin-lacey.html
@@ -4,7 +4,7 @@
             <img src="/images/photo_erin-lacey.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Erin Lacey</h2>
+            <h2>Erin Lacey, MS</h2>
             <p class="title">Office Manager</p>
         </div>
     </div>
