--- a/public/bio_gail-hadley.html
+++ b/public/bio_gail-hadley.html
@@ -4,7 +4,7 @@
             <img src="/images/photo_gail-hadley.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Gail L. Hadley, RN, RVT</h2>
+            <h2>Gail L. Hadley, RN, RVT, FSVU</h2>
             <p class="title">Technical Director</p>
         </div>
     </div>
