--- a/public/bio_victoria-sova.html
+++ b/public/bio_victoria-sova.html
@@ -19,6 +19,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_erin-lacey.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_ido-weinberg.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
