--- a/public/bio_ido-weinberg.html
+++ b/public/bio_ido-weinberg.html
@@ -17,12 +17,12 @@
             </ul>
         </div>
         <div class="twelve columns">
-            <p>Dr. Weinberg received his medical degree and completed his Internal Medicine training at the Hadassah Hebrew University School of Medicine in Israel.  He completed his Vascular Medicine fellowship at the Massachusetts General Hospital. Dr. Weinberg is Board Certified in Vascular Medicine (American Board of Vascular Medicine) and is a Registered Physician in Vascular Interpretation (RPVI). He is active clinically in patient care as part of the Fireman Vascular Center at Massachusetts General Hospital.</p> 
+            <p>Dr. Weinberg received his medical degree and completed his Internal Medicine training at the Hadassah Hebrew University School of Medicine in Israel.  He completed his Vascular Medicine fellowship at the Massachusetts General Hospital. Dr. Weinberg is Board Certified in Vascular Medicine (American Board of Vascular Medicine) and is a Registered Physician in Vascular Interpretation (RPVI). He is active clinically in patient care as part of the Fireman Vascular Center at Massachusetts General Hospital.</p>
 
             <p>His on-going research focuses on manifestations of arterial disease and venous thromboembolic disease with particular interest in inferior vena cava filters and pulmonary embolism. As a result, Dr. Weinberg has authored numerous manuscripts on these topics. Dr. Weinberg is also Founder and Editor In-Chief of Angiologist.com, the only online portal for Vascular Medicine.</p>
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_heather-marino.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_erin-lacey.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
