Edits to Erin, Justin, removed Lindsay.

--- a/public/bio_justin-mcneil.html
+++ b/public/bio_justin-mcneil.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Justin McNeil</h2>
-            <p class="title">Project Manager</p>
+            <p class="title">Project Team Lead</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
