--- a/public/bio_luis-cintron.html
+++ b/public/bio_luis-cintron.html
@@ -17,6 +17,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_michael-jaff.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_brian-chung.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
