Updates to staff section

--- a/public/bio_gail-hadley.html
+++ b/public/bio_gail-hadley.html
@@ -25,6 +25,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_sandra-croteau.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_erin-lacey.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
