--- a/public/bio_ido-weinberg.html
+++ b/public/bio_ido-weinberg.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Ido Weinberg, MD, MSc, MHA, FSVM, RPVI</h2>
-            <p class="title">Physician Reviewer</p>
+            <p class="title">Director</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -23,6 +23,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_erin-lacey.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_michael-jaff.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
