--- a/public/bio_michael-jaff.html
+++ b/public/bio_michael-jaff.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Michael R. Jaff, D.O.</h2>
-            <p class="title">Founder and Medical Director of VasCore</p>
+            <p class="title">Founder of VasCore</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
@@ -26,7 +26,7 @@
         <div class="twelve columns">
             <p>Michael R. Jaff, D.O. is Professor of Medicine at Harvard Medical School, Medical Director of the Vascular Center, and is an active clinical consultant in all aspects of vascular medicine, including peripheral arterial disease, venous thromboembolic disease, aneurysmal diseases, and all diagnostic strategies in vascular medicine.</p>
 
-            <p>He is the founder and Medical Director of the Vascular Ultrasound Core Laboratory, the largest of its kind in the United States.  The Vascular Ultrasound Core Laboratory has participated in trial design and independent analysis of vascular laboratory images for over 170 prospective multicenter trials across 66 countries.</p> 
+            <p>He is the founder and Medical Director of the Vascular Ultrasound Core Laboratory, the largest of its kind in the United States.  The Vascular Ultrasound Core Laboratory has participated in trial design and independent analysis of vascular laboratory images for over 170 prospective multicenter trials across 66 countries.</p>
 
             <p>Dr. Jaff was asked to lead reorganization of care delivery across the MGH in 2013, and has now led over 20 teams which have demonstrated marked improvements in efficiency and value.  Most recently, Dr. Jaff was named Director for the MGH Center for Specialized Services.</p>
 
@@ -38,6 +38,6 @@
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_debra-jaff.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_gail-hadley.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
