--- a/public/bio_erin-lacey.html
+++ b/public/bio_erin-lacey.html
@@ -13,12 +13,12 @@
 
         </div>
         <div class="twelve columns">
-            <p>Erin Lacey is the Administrative Manager of VasCore, the Vascular Ultrasound Core Lab, where she manages daily office workflow, including not but not limited to, maintaining the VasCore Tracking System and overseeing all communication with sponsors and clinical sites on trial related issues.</p> 
+            <p>Erin Lacey is the Administrative Manager of VasCore, the Vascular Ultrasound Core Lab, where she manages daily office workflow, including not but not limited to, maintaining the VasCore Tracking System and overseeing all communication with sponsors and clinical sites on trial related issues.</p>
 
             <p>Erin has been working for VasCore since June 2014. Prior to joining Vascore, Erin worked within Massachusetts General Hospital since 2010 in an Administrative Coordinator role while earning her Masters of Science in Health Informatics and Management from the University of Massachusetts.</p>
         </div>
     </div>
     <div class="modalfooter">
-        <a href="bio_justin-mcneil.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
+        <a href="bio_sandra-croteau.html" class="in-reveal">Next<span class="mobilehide"> team member</span></a>
     </div>
 </div>
