--- a/public/bio_ido-weinberg.html
+++ b/public/bio_ido-weinberg.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Ido Weinberg, MD, MSc, MHA, FSVM, RPVI</h2>
-            <p class="title">Director</p>
+            <p class="title">Medical Director</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
