--- a/public/bio_kathryn-lane.html
+++ b/public/bio_kathryn-lane.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Kathryn Lane, LPN, RVT</h2>
-            <p class="title">TBD</p>
+            <p class="title">Technical Staff Interpreter</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
