name/title edits

--- a/public/bio_corinne-payette-raftery.html
+++ b/public/bio_corinne-payette-raftery.html
@@ -4,7 +4,7 @@
             <img src="/images/photo_corinne-payette-raftery.jpg" alt="" />
         </div>
         <div class="twelve columns">
-            <h2>Corinne Payette-Raftery, BS, RVT, RPhs</h2>
+            <h2>Corinne Payette-Raftery, BS, RVT, RPhS</h2>
             <p class="title">Technical Directory</p>
         </div>
     </div>
