--- a/public/bio_corinne-payette-raftery.html
+++ b/public/bio_corinne-payette-raftery.html
@@ -5,7 +5,7 @@
         </div>
         <div class="twelve columns">
             <h2>Corinne Payette-Raftery, BS, RVT, RPhS</h2>
-            <p class="title">Technical Directory</p>
+            <p class="title">Technical Director</p>
         </div>
     </div>
     <div class="modalcontent clearfix">
